--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -8,7 +8,7 @@
       <div class="hero-container">
         <div class="wow fadeIn">
           <div class="hero-logo" style="font-size: 500px;" style="font-family: sans-serif;">
-           <img class ="logo"src="../../../assets/img.jpg">
+           <img class ="logo"src="../../../assets/logo.png">
           </div>
           <h1 id="size"> Inception Wave</h1>
           <div class="actions">
