--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -8,6 +8,7 @@ body {
   background: #dbd1c7;
   font-family: "Montserrat", sans-serif;
   margin: 0;
+  min-height: 900px;
 }
 
 a {
@@ -189,7 +190,18 @@ footer .fp a:hover {
 #sign-up-form {
   display: none;
 }
-
+.btnsign{
+  background-color: aliceblue;color: black;width: 100px;margin-left: 160px;font-size: 15px;
+}
+.nyr{
+  margin-left: 80px;
+}
+.log{
+  margin-left: 170px;color: whitesmoke;font-size: 15px;background-color: aliceblue;color: black;width: 70px;
+}
+#profs{
+  background-color: aliceblue;color: black;width: 100px;margin-left: 150px;font-size: 20px;margin-top: -50px;width: 100px;height: 40px;
+}
 @media (max-width: 524px) {
   .container-shadow {
     width: 400px;
@@ -230,10 +242,56 @@ footer .fp a:hover {
   .wrap {
     width: 80%;
   }
+  body{
+    min-height: 680px;
+  }
+  .btnsign{
+    font-size: 15px;
+    margin-left: 80px;
+  }
+  .nyr{
+    text-align: center;
+    margin-left: 10px;
+    font-size: 12px;
+  }
+  .log{
+    margin-top: -10px;
+    margin-left: 95px;
+    background-color: aliceblue;color: black;width: 70px;font-size: 15px;
+  }
+  .container{
+    min-height: 600px;
+  }
+  #profs{
+    margin-left: 60px;
+  }
 }
 
 @media (max-width: 330px) {
+  body{
+    min-height: 680px;
+  }
+  .btnsign{
+    font-size: 15px;
+    margin-left: 80px;
+  }
   .wrap {
     width: 90%;
+  }
+  .nyr{
+    text-align: center;
+    margin-left: 10px;
+    font-size: 12px;
+  }
+  .log{
+    margin-top: -10px;
+    margin-left: 95px;
+    background-color: aliceblue;color: black;width: 70px;font-size: 15px;
+  }
+  .container{
+    min-height: 600px;
+  }
+  #profs{
+    margin-left: 60px;
   }
 }
