--- a/src/app/components/admindash/admindash.component.css
+++ b/src/app/components/admindash/admindash.component.css
@@ -1,14 +1,12 @@
 /*
-    rgb(44, 178, 255)
-*/
-/*
     DEMO STYLE
 */
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
+
 body {
     font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+    background: #6190E8;
 }
 a, a:hover, a:focus {
     color: inherit;
@@ -27,7 +25,7 @@ a, a:hover, a:focus {
     left: -5px;
     min-height: 47rem;
     z-index: 999;
-    background: rgb(44, 178, 255);
+    background: rgb(255, 187, 0);
     color: black;
     transition: all 0.3s;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
@@ -54,7 +52,7 @@ a, a:hover, a:focus {
     display: block;
 }
 #sidebar ul li a:hover {
-    color: rgb(44, 178, 255);
+    color: rgb(255, 187, 0);
     background: #fff;
 }
 
@@ -100,7 +98,7 @@ ul.CTAs a {
 }
 a.download {
     background: #fff;
-    color: rgb(44, 178, 255);
+    color: rgb(255, 187, 0);
 }
 a.article, a.article:hover {
     background: #6d7fcc !important;
@@ -121,16 +119,11 @@ a.article, a.article:hover {
     right: 0;
 }
 
-.btn{
-    background-color: rgb(44, 178, 255);
-    border-color: rgb(44, 178, 255);
-}
-
 .navv{
     background-color: white;
     margin-top: -10px;
     padding: 0%;
-    margin-left: 230px;
+    margin-left: 100px;
     width: 1230px;
 }
 .navit{
@@ -139,7 +132,18 @@ a.article, a.article:hover {
     margin-bottom: -5px;
     font-size: 16px;
 }
-
+.navit1{
+    margin-top: -31px;
+    margin-left: 700px;
+    margin-bottom: -5px;
+    font-size: 16px;
+}
+.navvv{
+    margin-left: 50px;
+}
+.navvv1{
+    margin-left: 90px;
+}
 /* ---------------------------------------------------
     CONTENT STYLE DASH
 ----------------------------------------------------- */
@@ -152,17 +156,72 @@ a.article, a.article:hover {
     margin-bottom: 40px;
 }
 .tname{
-    width: 70rem;
+    width: 35rem;
     height: 3rem;
-    margin-left: 40px;
+    margin-left: 400px;
     margin-top: 40px;
+    background: #6190E8;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #A7BFE8, #6190E8);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #A7BFE8, #6190E8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .atname{
+    text-transform:capitalize;
+    font-size: 20px;
     margin-top: 10px;
-    margin-left: 50px;
+    text-align: center;
+}
+.card1{
+    width: 89rem; min-height: 42rem;margin-left: 130px;margin-top: -40px;
+    background: #C9D6FF;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+    
+
+}
+.hname{
+    text-align: center;margin-top: 20px;
+}
+.hrs{
+    border: 1px black solid;margin-left: 60px;width: 1350px;
+}
+.imgg{
+    margin-left: -20px;margin-top: -10px;
+}
+.nnaavv{
+    margin-top:-40px;
+}
+.navi{
+    margin-top:30px;
+    margin-bottom: -20px;
+}
+.navi1{
+    margin-top:20px;
+    margin-bottom: -20px;
+}
+.titles{
+    margin-top:30px;
+    margin-bottom: -20px;
+    width: 200px;
 }
 
+.btn{
+    background-color: rgb(255, 187, 0);
+    border-color: rgb(255, 187, 0);
+    font-size: 18px;
+}
+.btn1{
+    margin-left: 50px;
+    background-color: red;
+    border-color: red;
+}
+.bbtn{
+    margin-left: 0px;
+    margin-top:20px;
+    margin-bottom: -20px;
+}
 /* ---------------------------------------------------
     CONTENT STYLE PROFILE
 ----------------------------------------------------- */
@@ -187,4 +246,51 @@ a.article, a.article:hover {
     margin-top: 70px;
     margin-left: 200px;
     background-color: rgb(255, 217, 0);
+}
+@media (min-width: 1000px){
+    body{
+        position: relative;
+        min-width: 100%;
+        height: 60rem;
+    }
+    .bbtn{
+        margin-left: 1100px;
+    }
+}
+@media (max-width: 330px) {
+    body{
+        min-width: 19.8em;
+        min-height: 41rem;
+    }
+    .card1{
+        width: 19rem; min-height: 40rem;margin-left: 6px;margin-top: -40px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .atname{
+        margin-top: 10px;
+        margin-left: 0px;
+    }
+    .navi1{
+        margin-top:-60px;
+        margin-bottom: 10px;
+        margin-left:150px;
+    }
+    .bbtn{
+        margin-left: 0px;
+        margin-bottom: 5px;
+    }
+    .btn{
+        margin-left: -5px;
+        width: 300px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 300px;
+    }
 }
