--- a/src/app/components/adminprofile/adminprofile.component.html
+++ b/src/app/components/adminprofile/adminprofile.component.html
@@ -1,47 +1,42 @@
 <body id="bo">
     
     <div class="wrapper">
-        <!-- Sidebar  -->
-        <nav id="sidebar">
-            <div class="sidebar-header">
-                <h3 style="color: white;">INCEPTION WAVE</h3>
-            </div>
-
-            <ul class="list-unstyled components">
-                <li>
-                    <a onclick="alert('Chat not added')">CHAT</a>
-                </li>
-            </ul>
-        </nav>
-        
-        <div id="content">
-            <div class="container-fluid">
-                <nav class="navbar navbar-light bg-light navv">
-                    <a class="navbar-brand" href="#">
-                      <img src="../../../assets/img.jpg" width="40" height="40" class="d-inline-block align-top" style="margin-left: 10px;margin-top: -10px;">
-                      <p class="navit">INCEPTION WAVE</p>
-                    </a>
-                    <a class="navbar-brand">
-                        <button style="margin-top: 5px;" class="btn" (click)="loggout()">LOGOUT</button>
-                    </a>
-                  </nav>
-                  <hr style="border: 1px black solid;margin-left: 35px;width: 1420px;">
-                <button type="button" id="sidebarCollapse" class="btn btn-info" style="margin-left: -10px;margin-top: 0px;">
-                	<i class="fas fa-align-left"></i>
-                </button>
+      <nav class="navbar navbar-expand-lg navbar-light nnaavv" style="background-color: #F0F8FF;">
+        <a class="navbar-brand navi" routerLink="/"><img src="../../../assets/logo.png"width="80" height="80"/></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" style="margin-top:40px;">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav bbtn">
+            <button style="margin-top: 5px;" class="btn btn1" (click)="loggout()">LOGOUT</button>
+          </div>
         </div>
-        <div class="card" style="width: 78rem; min-height: 41rem;margin-left: 240px;margin-top: -40px;">
-            <h1 style="text-align: center;margin-top: 20px;">ADMIN PROFILE</h1>
+      </nav>
+        <br><br><br>
+        <div class="card card1">
+            <h1 style="text-align: center;margin-top: 20px;">MY PROFILE</h1>
             <br>
-            <h3 style="text-align: center;margin-top: 20px;">USERNAME</h3>
-            <div class="pfile" style="margin-left: 300px;"> 
-                <br><br>
-                <p><b>ID: {{ureg}} </b></p>
-                <br>
-                <p><b>Username: {{uname}} </b></p>
-                <br>
-                <p><b>Email: {{uemail}} </b></p>
-                <br><br>
+            <div class="pfile">
+              <br><br>
+              <p><b>ID: {{ureg}} </b></p>
+              <br>
+              <p><b>Username: {{uname}} </b></p>
+              <br>
+              <p><b>Email: {{uemail}} </b></p>
+              <br><br>
             </div>
       </div>
     </div>
+
+    <div class="overlay"></div>
+
+<!--
+<h1>Profiles</h1>
+
+<ul>
+  <li *ngFor="let user of users">
+    <p class="name">{{ user.username }}</p>
+    <p class="name">{{ user.email }}</p>
+    <p class="name">{{ user.regno }}</p>
+  </li>
+</ul>-->
