--- a/src/app/components/eachintern/eachintern.component.html
+++ b/src/app/components/eachintern/eachintern.component.html
@@ -1,50 +1,27 @@
 <body id="bo">
-    
     <div class="wrapper">
-        <!-- Sidebar  -->
-        <nav id="sidebar">
-            <div class="sidebar-header">
-                <h3 style="color: white;">INCEPTION WAVE</h3>
+        <nav class="navbar navbar-expand-lg navbar-light nnaavv" style="background-color: #F0F8FF;">
+            <a class="navbar-brand navi" routerLink="/"><img src="../../../assets/logo.png"width="80" height="80"/></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" style="margin-top:40px;">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav bbtn">
+                <button style="margin-top: 5px;" class="btn" routerLink="/adminprofile">PROFILE</button>
+                <button style="margin-top: 5px;" class="btn btn1" (click)="loggout()">LOGOUT</button>
+              </div>
             </div>
-
-            <ul class="list-unstyled components">
-                <li>
-                    <a (click)="dash()">Dashboard</a>
-                </li>
-                <li>
-                    <a routerLink="/adminprofile">Profile</a>
-                </li>
-                <li>
-                    <a onclick="alert('Chat not added')">CHAT</a>
-                </li>
-            </ul>
-        </nav>
-        
-        <div id="content">
-            <div class="container-fluid">
-                <nav class="navbar navbar-light bg-light navv">
-                    <a class="navbar-brand" href="#">
-                      <img src="../../../assets/img.jpg" width="40" height="40" class="d-inline-block align-top" style="margin-left: 10px;margin-top: -10px;">
-                      <p class="navit">INCEPTION WAVE</p>
-                    </a>
-                    <a class="navbar-brand">
-                        <button style="margin-top: 5px;" class="btn" (click)="loggout()">LOGOUT</button>
-                    </a>
-                  </nav>
-                <hr style="border: 1px black solid;margin-left: 230px;width: 1230px;">
-        </div>
-        <br>
-        <div class="card" style="width: 77rem; min-height: 42rem;margin-left: 240px;margin-top: -40px;">
-            <h1 style="text-align: center;margin-top: 20px;">INTERNSHIP TASKS</h1>
+          </nav>
+        <br><br><br>
+        <div class="card card1">
+            <h1 class="hname">INTER'S TASKS</h1>
             <div style="margin-top: 70px;">
-                <ul >
-                    
-                    <li class="card tname"*ngFor="let user of users1"><a class="atname" (click)="eacht(user)"><b>{{user.taskname}}</b><b style="margin-left: 300px;">{{user.enddate}}</b><b style="margin-left: 300px;"> {{user.complete}}</b></a></li>
-                    <!--
-                     <li class="card tname"><a class="atname" href="./tasks.html" routerLink="/admintask"><b>Task 2</b><b style="margin-left: 300px;">Deadline: DD/MM/YYYY</b><b style="margin-left: 300px;">Status: Pending</b></a></li>
-                    <li class="card tname"><a class="atname" href="./tasks.html" routerLink="/admintask"><b>Task 3</b><b style="margin-left: 300px;">Deadline: DD/MM/YYYY</b><b style="margin-left: 300px;">Status: Pending</b></a></li> -->
-                    <a class="tname btn" routerLink="/addtask" style="width: 150px;padding-top: 10px;">Add New Task</a>
+                <ul>
+                    <li class="card tname"*ngFor="let user of users1"><a class="atname" (click)="eacht(user)"><b class="at1">{{user.taskname}}</b><b class="at2"> {{user.complete}}</b></a></li>
+                    <a class=" btn btn2" routerLink="/addtask">Add New Task</a>
                 </ul>
+                <br><br>
             </div>
-      </div>
+        </div>
     </div>
+    </body>
