--- a/src/app/components/adminlogin/adminlogin.component.html
+++ b/src/app/components/adminlogin/adminlogin.component.html
@@ -2,7 +2,7 @@
   <div class="alert">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
     <strong style="margin-left: 20px;">
-      If already logged in: Click Here: <button type="button" (click)="allog()" class="altbtn">GO to Dashboard</button>
+      If loggedIn previously: Click Here: <button type="button" (click)="allog()" class="altbtn">GO to Dashboard</button>
     </strong>
   </div>
     <div class="container-shadow"></div>
