--- a/src/app/components/adminlogin/adminlogin.component.css
+++ b/src/app/components/adminlogin/adminlogin.component.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #dbd1c7;
+  background-color: #6d7fcc;
   font-family: "Montserrat", sans-serif;
   margin: 0;
 }
@@ -241,6 +241,7 @@ footer .fp a:hover {
     font-size: 12px;
   }
   .altbtn{
+    margin-top: -2px;
     margin-right: 10px;
   }
   .logbtn{
@@ -300,10 +301,6 @@ footer .fp a:hover {
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
 
-body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
-}
 a, a:hover, a:focus {
     color: inherit;
     text-decoration: none;
