--- a/src/app/components/first/first.component.css
+++ b/src/app/components/first/first.component.css
@@ -1,212 +1,416 @@
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 
-body {
-    background: transparent;
-    color: #02a0fc;
-    font-family: "Open Sans", sans-serif;
-  }
-  
-  a {
-    color: #03C4EB;
-    transition: 0.5s;
-  }
-  /* #size{
-    font-size: larger;
-    font-weight: 700;
-    color: #02a0fc;
-  } */
-  
-  
-  a:hover, a:active, a:focus {
-    color: #03c5ec;
-    outline: none;
-    text-decoration: none;
-  }
-  .logo{
-border-radius: 9px;
-height: 250px;
-width: 250px;
-  }
-  
-  p {
-    padding: 0;
-    margin: 0 0 30px 0;
-  }
-  
-   h1,h2, h3, h4, h5, h6 {
-    font-family: "Raleway", sans-serif;
-    font-weight: 400;
-    margin: 0 0 20px 0;
-    padding: 0;
-  }
-  
-  
-  /* Back to top button */
-  
-  @media (max-width: 768px) {
-    .back-to-top {
-      bottom: 15px;
-    }
-  }
-  
-  .back-to-top:focus {
-    background: rgba(0, 0, 0, 0.2);
+
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  align-items: center;
+}
+body{
+  font-family: Baloo;
+}
+img{
+  height: 300px;
+}
+.img-container {
+  text-align: center;
+  height: 400px;
+}
+
+
+a.animated-button:link, a.animated-button:visited {
+    position: relative;
+    z-index: 2;
+    display: block;
+    margin: 30px auto 0;
+    padding: 14px 15px;
     color: #fff;
-    outline: none;
-  }
-  
-  .back-to-top:hover {
-    background: #03C4EB;
-    color: #fff;
-  }
-  
-  /*--------------------------------------------------------------
-  # Welcome
-  --------------------------------------------------------------*/
-  #hero {
-    display: table;
-    width: 100%;
-    height: 98vh;
-  }
-  
-  @media (min-width: 1024px) {
-    #hero {
-      background-attachment: fixed;
-    }
-  }
-  
-  #hero .hero-logo {
-    margin: 20px;
-  }
-  
-  #hero .hero-logo img {
-    max-width: 100%;
-  }
-  
-  #hero .hero-container {
-    background: rgba(0, 0, 0, 0);
-    display: table-cell;
-    margin: 0;
-    padding: 0;
+    font-size:14px;
+    font-weight: bold;
     text-align: center;
-    vertical-align: middle;
-  }
-  
-  #hero h1 {
-    margin: 30px 0 10px 0;
-    font-weight: 700;
-    line-height: 48px;
+    text-decoration: none;
     text-transform: uppercase;
+    overflow: hidden;
+    letter-spacing: .08em;
+    border-radius: 0;
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+}
+a.animated-button:link:after, a.animated-button:visited:after {
+    content: "";
+    position: absolute;
+    height: 0%;
+    left: 50%;
+    top: 50%;
+    width: 150%;
+    z-index: -1;
+    -webkit-transition: all 0.75s ease 0s;
+    -moz-transition: all 0.75s ease 0s;
+    -o-transition: all 0.75s ease 0s;
+    transition: all 0.75s ease 0s;
+}
+a.animated-button:link:hover, a.animated-button:visited:hover {
+    color: #FFF;
+    text-shadow: none;
+}
+a.animated-button:link:hover:after, a.animated-button:visited:hover:after {
+    height: 450%;
+}
+a.animated-button:link, a.animated-button:visited {
+    position: relative;
+    display: block;
+    margin: 30px auto 0;
+
+    padding: 14px 55px;
+    padding-left: 20px;
     color: #fff;
-  }
-  
-  @media (max-width: 768px) {
-    #hero h1 {
-      font-size: 28px;
-      line-height: 36px;
-    }
-  }
-  
-  #hero h2 {
-    color: #999;
-    margin-bottom: 50px;
-  }
-  
-  @media (max-width: 768px) {
-    #hero h2 {
-      font-size: 24px;
-      line-height: 26px;
-      margin-bottom: 30px;
-    }
-    #hero h2 .rotating {
-      display: block;
-    }
-  }
-  
-  #hero .rotating > .animated {
-    display: inline-block;
-  }
-  
-  #hero .actions a {
-    font-family: "Raleway", sans-serif;
+    font-size:14px;
+    border-radius: 0;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
     text-transform: uppercase;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: 1px;
-    display: inline-block;
-    padding: 8px 20px;
-    border-radius: 2px;
-    transition: 0.002s;
-    margin: 10px;
-  }
-  
-  #hero .btn-get-started {
-    border: 2px solid #fff;
+    overflow: hidden;
+    letter-spacing: .08em;
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+}
+a.animated-button.thar-one {
     color: #fff;
-  }
-  
-  #hero .btn-get-started:hover {
-    background: #03C4EB;
-    border: 2px solid #03C4EB;
-  }
-  
-  #hero .btn-services {
-    border: 2px solid #fff;
+    cursor: pointer;
+    display: block;
+    padding-left: 15px;
+
+    /* padding-right:60px; */
+    position: relative;
+    border: 2px solid #F7CA18;
+    transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+}
+a.animated-button.thar-one:hover {
+    color: #000 !important;
+    background-color: transparent;
+    text-shadow: none;
+}
+a.animated-button.thar-one:hover:before {
+    bottom: 0%;
+    top: auto;
+    height: 100%;
+}
+a.animated-button.thar-one:before {
+    display: block;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    height: 0px;
+    width: 100%;
+    z-index: -1;
+    content: '';
+    color: #000 !important;
+    background: #F7CA18;
+    transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+}
+a.animated-button.thar-two {
     color: #fff;
-  }
-  
-  #hero .btn-services:hover {
-    background: #03C4EB;
-    border: 2px solid #03C4EB;
-  }
-  
-  /*--------------------------------------------------------------
-  # Header
-  --------------------------------------------------------------*/
-  #header {
-    background: #111;
-    padding: 20px 0;
-    height: 90px;
-  }
-  
-  #header #logo {
-    float: left;
-  }
-  
-  #header #logo h1 {
-    font-size: 36px;
-    margin: 0;
-    padding: 6px 0;
-    line-height: 1;
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-  }
-  
-  #header #logo h1 a, #header #logo h1 a:hover {
+    cursor: pointer;
+    display: block;
+    position: relative;
+    border: 2px solid #F7CA18;
+    transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+}
+a.animated-button.thar-two:hover {
+    color: #000 !important;
+    background-color: transparent;
+    text-shadow: ntwo;
+}
+a.animated-button.thar-two:hover:before {
+    top: 0%;
+    bottom: auto;
+    height: 100%;
+}
+a.animated-button.thar-two:before {
+    display: block;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    height: 0px;
+    width: 100%;
+    z-index: -1;
+    content: '';
+    color: #000 !important;
+    background: #F7CA18;
+    transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+}
+a.animated-button.thar-three {
     color: #fff;
-  }
-  
-  #header #logo img {
-    padding: 0;
-    margin: 0;
-    max-height: 50px;
-  }
-  
-  @media (max-width: 768px) {
-    #header {
-      height: 80px;
+    cursor: pointer;
+    padding-left: 50px;
+    padding-right:100px;
+    display: block;
+    position: relative;
+    border: 2px solid #F7CA18;
+    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+}
+a.animated-button.thar-three:hover {
+    color: #000 !important;
+    background-color: transparent;
+    text-shadow: nthree;
+}
+a.animated-button.thar-three:hover:before {
+    left: 0%;
+    right: auto;
+    width: 100%;
+}
+a.animated-button.thar-three:before {
+    display: block;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 100%;
+    width: 0px;
+    z-index: -1;
+    content: '';
+    color: #000 !important;
+    background: #F7CA18;
+    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+}
+a.animated-button.thar-four {
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    position: relative;
+    border: 2px solid #F7CA18;
+    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+}
+a.animated-button.thar-four:hover {
+    color: #000 !important;
+    background-color: transparent;
+    text-shadow: nfour;
+}
+a.animated-button.thar-four:hover:before {
+    right: 0%;
+    left: auto;
+    width: 100%;
+}
+a.animated-button.thar-four:before {
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 0px;
+    z-index: -1;
+    content: '';
+    color: #000 !important;
+    background: #F7CA18;
+    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+}
+.banner-text{
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  top: 20%;
+}
+.banner-text h2{
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  left: 380px;
+  top: 50px;
+}
+.banner-text ul{
+  height: 50px;
+  float: right;
+}
+.banner-text ul li{
+  display: inline-block;
+  padding: 40px 15px;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 20px;
+}
+.banner-text h2{
+  text-align: center;
+  color: #fff;
+  font-size: 50px;
+  margin-top: 15%;
+}
+.animation-area{
+  background: linear-gradient(to left,#8942a8,#ba382f);
+  width: 100%;
+  height: 100vh;
+}
+.box-area{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.box-area li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 20s linear infinite;
+  bottom: -150px;
+}
+.box-area li:nth-child(1){
+  left: 86%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+.box-area li:nth-child(2){
+  left: 12%;
+  width: 30px;
+  height: 30px;
+  animation-delay: 1.5s;
+  animation-duration: 10s;
+}
+.box-area li:nth-child(3){
+  left: 70%;
+  width: 100px;
+  height: 100px;
+  animation-delay: 5.5s;
+
+}
+.box-area li:nth-child(4){
+  left: 42%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 15s;
+}
+.box-area li:nth-child(5){
+  left: 65%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 0s;
+}
+.box-area li:nth-child(6){
+  left: 15%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3.5s;
+}
+
+.box-area li:nth-child(7){
+  left: 86%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+.box-area li:nth-child(8){
+  left: 12%;
+  width: 30px;
+  height: 30px;
+  animation-delay: 1.5s;
+  animation-duration: 10s;
+}
+.box-area li:nth-child(8){
+  left: 70%;
+  width: 100px;
+  height: 100px;
+  animation-delay: 5.5s;
+
+}
+.box-area li:nth-child(10){
+  left: 42%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 15s;
+}
+.box-area li:nth-child(11){
+  left: 65%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 0s;
+}
+.box-area li:nth-child(12){
+  left: 15%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3.5s;
+}
+.hed{
+  margin-left: 0px;
+}
+.b1{
+  margin-left:180px;
+}
+.b2{
+  margin-left:100px;
+}
+a.animated-button.thar-three{
+  padding-right: 50px;
+}
+.btns{
+  margin-left: 500px;
+}
+.iimg{
+  margin-top:-100px;
+  width: 500px;
+  height: 500px;
+}
+@keyframes animate {
+    0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
     }
-    #header #logo h1 {
-      font-size: 26px;
+    100%{
+      transform: translateY(-800px) rotate(360deg);
+      opacity: 0;
     }
-    #header #logo img {
-      max-height: 40px;
-    }
+}
+@media only screen and (max-width: 900px) {
+  .banner-text h2{
+    position: absolute;
+    top: 150px;
+    left: 40px;
   }
-  
-  .is-sticky #header {
-    background: rgba(0, 0, 0, 0.85);
+}
+
+@media (max-width: 330px){
+  .iimg{
+    width: 300px;
+    height: 300px;
+    margin-left: -20px;
   }
-  
-  
+  .hed{
+    margin-top: -20px;
+    margin-left: -40px;
+    
+  }
+  .banner-text h2{
+    font-size: 35px;
+  }
+  .b1{
+    margin-left:-490px;
+  }
+  .b2{
+    margin-left:10px;
+  }
+  .animation-area{
+    height: 100%;
+    margin-bottom: -100px;
+  }
+}
