--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -1,9 +1,6 @@
+<!--
 <body style="background-color: rgba(0, 0, 0, 0.8)">
     <div id="preloader"></div>
-  
-    <!--==========================
-    Hero Section
-    ============================-->
     <section id="hero">
       <div class="hero-container">
         <div class="wow fadeIn">
@@ -18,4 +15,37 @@
         </div>
       </div>
     </section>
+  </body>
+-->
+  <body>
+    <div class="banner-text">
+      <div class="img-container">
+        <img class="iimg" src="../../../assets/logo.png" alt="">
+      </div>
+      <h2 class="hed">Welcome to Inception Wave Internship</h2>
+      <div class="row btns">
+        <div class="b1"> <a href="/login" class="btn animated-button thar-three bb1">User</a> </div>
+        <div class="b2"> <a href="/adminlogin" class="btn animated-button thar-three bb2">Admin</a> </div>
+      </div>
+    </div>
+    <div class="animation-area" style="min-height: 1000;">
+      <ul class="box-area">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+    <!--
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>-->
   </body>
