--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #dbd1c7;
+  background-color: #6d7fcc;
   font-family: "Montserrat", sans-serif;
   margin: 0;
   min-height: 900px;
@@ -269,7 +269,8 @@ footer .fp a:hover {
 
 @media (max-width: 330px) {
   body{
-    min-height: 680px;
+    height: 880px;
+    background: linear-gradient(90deg, #29323c 0%, #3b4249 100%)
   }
   .btnsign{
     font-size: 15px;
