--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -9,20 +9,20 @@
         <form class="form" style="margin-top: -60px;">
           <div class="form-group">
             <label >Registration Number</label>
-            <input type="text" name="regno" [(ngModel)]="registerUserData.regno" id="regno" required>
+            <input type="text" name="regno" [(ngModel)]="registerUserData.regno" id="regno" ngModel ng-required="true" required>
           </div>
           <div class="form-group">
             <label >Username</label>
-            <input type="text" name="username" [(ngModel)]="registerUserData.username" id="name" required>
+            <input type="text" name="username" [(ngModel)]="registerUserData.username" id="name" ngModel ng-required="true" required>
           </div>
           <div class="form-group">
             <label>Password</label>
-            <input type="password" name="password" [(ngModel)]="registerUserData.password" id="password" required>
+            <input type="password" name="password" [(ngModel)]="registerUserData.password" id="password" ngModel ng-required="true" required>
           </div>
           <div class="form-group">
             <label for="profs">Please Select a mentor:</label>
             <br>
-            <select name="profs" id="profs" [(ngModel)]="registerUserData.options" >
+            <select name="profs" id="profs" [(ngModel)]="registerUserData.options" ngModel ng-required="true" required>
               <option style="font-size: 15px;" value="100503" name="options" >100503</option>
               <option style="font-size: 15px;" value="100507" name="options" >100507</option>
               <option style="font-size: 15px;" value="100511" name="options" >100511</option>
@@ -32,9 +32,9 @@
           </div>
           <div class="form-group">
             <label>Email</label>
-            <input type="email" name="email" id="email" [(ngModel)]="registerUserData.email" required>
+            <input type="email" name="email" id="email" [(ngModel)]="registerUserData.email" ngModel [email]="true" ng-required="true" required>
           </div>
-          <button type="button" (click)="registerUser()" class="btnsign">SIGNUP</button>
+          <button type="button" (click)="registerUser()" [disabled]="!form.valid" class="btnsign">SIGNUP</button>
         </form>
         <label class="nyr">Already Registered Account?</label>
         <button type="button" routerLink="/login" class="log">Login</button>
@@ -46,55 +46,3 @@
 </body>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-<!--
-
-  <body>
-  <div class="container-shadow"></div>
-  <div class="container" style="height: 800px">
-    <div class="wrap" style="margin-top: -70px;">
-      <div class="headings">
-        <h1 style="text-align: center;color: whitesmoke;">SIGNUP</h1>
-      </div>
-      <div>
-        <form #userPost="ngForm" (ngSubmit)="onSubmit(userPost.value)" style="margin-top: -60px;">
-          <label >Registration Number</label>
-          <input type="text" name="regno" ngModel id="regno" required>
-          <label >Username</label>
-          <input type="text" name="username" ngModel id="name" required>
-          <label>Password</label>
-          <input type="password" name="password" ngModel id="password" required>
-          <label for="profs">Please Select a mentor:</label>
-          <br>
-          <select name="profs" id="profs" style="background-color: aliceblue;color: black;width: 100px;margin-left: 150px;font-size: 20px;margin-top: -50px;width: 100px;height: 40px;">
-            <option style="font-size: 15px;" value="100503" name="options" ngModel>100503</option>
-            <option style="font-size: 15px;" value="100507" name="options" ngModel>100507</option>
-            <option style="font-size: 15px;" value="100511" name="options" ngModel>100511</option>
-            <option style="font-size: 15px;" value="100959" name="options" ngModel>100959</option>
-            <option style="font-size: 15px;" value="101296" name="options" ngModel>101296</option>
-          </select>
-          <label>Email</label>
-          <input type="email" name="email" id="email" ngModel required>
-          <button type="submit" style="background-color: aliceblue;color: black;width: 100px;margin-left: 150px;font-size: 15px;">SIGNUP</button>
-        </form>
-        <label style="margin-left: 50px;">Already Registered Account?</label>
-        <a routerLink="/login" style="margin-left: 160px;color: whitesmoke;font-size: 20px;">Login</a>
-      </div>
-      <br>
-    </div><br><br>
-  </div>
-
-</body>
-
--->
